# practice

./: README.md
fundamental_algorithms/: apriori.py  category.hs  heap_sort.cpp  heap_sort.py  leastsq.py  study.scm
geometry/: READ.md  accrucy.py  analysis.py  bezier.py  bezier3.py  bezier5.py  control.py  controller.py  dataset.py  feats.py  features.py  grab.py  hough.py  landmark.py  routeCurve.py  scan.py  scan2.py  shelf.py  tensor.py  test.py
graph/: CMakeLists.txt  Makefile  build.sh  config.server  main.cpp  main_ice.cpp  make.sh  map.cpp  map.h  tsp.cpp  tsp.hpp
notes/: bigblow-html.org  deep_learning.org  haskell.org  modern_algebra.org  project_geometry.tex  recursive.tex  report.org  slam.org  train.org
vision/: READ.md
